--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-*{
+* {
   box-sizing: border-box;
 }
 body {
@@ -9,7 +9,7 @@ img {
 }
 main {
   padding: 10px;
-  max-width: 700px;
+  max-width: 960px;
   margin: 0 auto;
 }
 header {
@@ -33,13 +33,22 @@ header nav {
 }
 div.post {
   display: grid;
-  grid-template-columns: 0.9fr 1.1fr;
+  grid-template-columns: 1fr;
   gap: 20px;
   margin-bottom: 30px;
+}
+@media screen and (min-width: 600px){
+  div.post{
+    grid-template-columns: 0.9fr 1.1fr;
+  }
 }
 div.post div.texts h2 {
   margin: 0;
   font-size: 1.8rem;
+}
+div.post div.texts a {
+  text-decoration: none;
+  color: inherit;
 }
 div.post p.info {
   margin: 06px 0;
@@ -70,7 +79,7 @@ input {
   border-radius: 5px;
   background-color: #fff;
 }
-button{
+button {
   width: 100%;
   display: block;
   background-color: #555;
@@ -79,6 +88,43 @@ button{
   border-radius: 5px;
   padding: 7px 0;
 }
-form.login h1, form.register h1{
+form.login h1,
+form.register h1 {
   text-align: center;
+}
+div.post-page div.image {
+  max-height: 200px;
+  display: flex;
+  overflow: hidden;
+}
+div.post-page div.image img {
+  object-fit: cover;
+  object-position: center center;
+  width: 100%;
+}
+div.post-page a {
+  color: #333;
+  text-decoration: underline;
+}
+div.post-page h1 {
+  text-align: center;
+  margin: 10px 0 5px;
+}
+div.post-page div.content {
+  width: 60%;
+}
+div.post-page div.content p {
+  line-height: 1.6rem;
+}
+div.post-page time {
+  text-align: center;
+  display: block;
+  font-size: 0.8rem;
+  color: #aaa;
+}
+div.post-page div.author {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: .7rem;
+  font-weight: bold;
 }
