--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,9 @@
 * {
   box-sizing: border-box;
 }
+a{
+  cursor: pointer;
+}
 body {
   color: #222;
 }
@@ -37,8 +40,8 @@ div.post {
   gap: 20px;
   margin-bottom: 30px;
 }
-@media screen and (min-width: 600px){
-  div.post{
+@media screen and (min-width: 600px) {
+  div.post {
     grid-template-columns: 0.9fr 1.1fr;
   }
 }
@@ -80,6 +83,7 @@ input {
   background-color: #fff;
 }
 button {
+  cursor: pointer;
   width: 100%;
   display: block;
   background-color: #555;
@@ -125,6 +129,23 @@ div.post-page time {
 div.post-page div.author {
   text-align: center;
   margin-bottom: 20px;
-  font-size: .7rem;
+  font-size: 0.7rem;
   font-weight: bold;
+}
+div.edit-row {
+  text-align: center;
+  margin-bottom: 20px;
+}
+div.post-page a.edit-btn {
+  background-color: #333;
+  display: inline-flex;
+  align-items: center;
+  gap: 5px;
+  color: #fff;
+  padding: 15px 30px;
+  border-radius: 5px;
+  text-decoration: none;
+}
+a svg{
+  height: 20px;
 }
